# shovel

./: .gitignore  CMakeLists.txt  README.md  main.c
docker/: capability.c  capability.h  cgroup.c  cgroup.h  dev.c  dev.h  path.c  path.h  security.c  security.h
exploits/: cve_2022_0492.c  cve_2022_0492.h  devices_allow.c  devices_allow.h  release_agent.c  release_agent.h
payloads/: cve_2022_0492.c  release_agent.c  release_agent.h
util/: custom_struts.c  custom_struts.h  mount_info.c  mount_info.h  output.c  output.h  program_info.c  program_info.h  random_str.c  random_str.h  regex_util.c  regex_util.h  utils.c  utils.h
